# geost

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  about.html  api_reference.html  changelog.html  community.html  documentation.html  examples.html  genindex.html  getting_started.html  index.html  korreldata.py  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  pysst_env.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  user_guide.html
.doctrees/: about.doctree  api_reference.doctree  changelog.doctree  community.doctree  documentation.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  user_guide.doctree
.doctrees/api_reference/: accessor.doctree  analysis.doctree  borehole_collection.doctree  bro.doctree  bro_geotop.doctree  collection.doctree  cpt_collection.doctree  data_accessors.doctree  discrete_data.doctree  enums.doctree  generic.doctree  geotop_selection.doctree  header_accessors.doctree  io.doctree  layered_data.doctree  point_header.doctree  readers.doctree  utils.doctree  validate.doctree  validation.doctree  voxelmodel.doctree
.doctrees/examples/: bhrgt_samples.doctree  boreholes_geotop_3d.doctree  bro_soil_cores.doctree  combine_geotop_with_cpts.doctree  dis_model.doctree  geotop_thickness_maps.doctree  read_xml.doctree  retrieve_bro_data.doctree
.doctrees/getting_started/: introduction.doctree
.doctrees/user_guide/: accessors.doctree  bro_geotop.doctree  data_structures.doctree  model_data.doctree  read_xml.doctree  reading_data.doctree  survey_data.doctree  validation.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/geost/: accessor.html  base.html  config.html  enums.html  projections.html  read.html  spatial.html
_sources/: about.md.txt  api_reference.md.txt  changelog.md.txt  community.md.txt  examples.md.txt  getting_started.md.txt  index.md.txt
_sources/api_reference/: accessor.rst.txt  analysis.rst.txt  borehole_collection.rst.txt  bro.rst.txt  bro_geotop.rst.txt  cpt_collection.rst.txt  discrete_data.rst.txt  enums.rst.txt  io.rst.txt  layered_data.rst.txt  utils.rst.txt  validate.rst.txt  validation.rst.txt  voxelmodel.rst.txt
_sources/examples/: bhrgt_samples.ipynb.txt  boreholes_geotop_3d.ipynb.txt  bro_soil_cores.ipynb.txt  combine_geotop_with_cpts.ipynb.txt  dis_model.ipynb.txt  geotop_thickness_maps.ipynb.txt  retrieve_bro_data.ipynb.txt
_sources/getting_started/: introduction.ipynb.txt
_sources/user_guide/: bro_geotop.ipynb.txt  data_structures.ipynb.txt  read_xml.ipynb.txt  reading_data.md.txt  validation.ipynb.txt
_static/: custom.css  pygments.css
api_reference/: accessor.html  analysis.html  borehole_collection.html  bro.html  bro_geotop.html  collection.html  cpt_collection.html  data_accessors.html  discrete_data.html  enums.html  generic.html  geotop_selection.html  header_accessors.html  io.html  layered_data.html  point_header.html  readers.html  utils.html  validate.html  validation.html  voxelmodel.html
data/: bhrg_bro.xml  boreholes_usp.parquet  cpts_usp.parquet  dike_section.geoparquet  geotop_usp.nc
docs/: _quarto.yml  about.md  api_reference.md  api_reference_sidebar.yml  changelog.md  community.md  conf.py  documentation.md  examples.md  fordevs.txt  getting_started.md  index.md  index.qmd  index.rst  user_guide.md
docs/_static/: custom.css
docs/api/: geost.rst  modules.rst  pysst.analysis.rst  pysst.bro.rst  pysst.export.rst  pysst.rst  pysst.validate.rst  tests.rst
docs/api_reference/: accessor.rst  analysis.rst  borehole_collection.rst  bro.rst  bro_geotop.rst  collection.rst  cpt_collection.rst  data_accessors.rst  enums.rst  generic.rst  geotop_selection.rst  header_accessors.rst  io.rst  layered_data.rst  point_header.rst  readers.rst  strat_geotop.rst  utils.rst  voxelmodel.rst
docs/documentation/: api_reference.md  reference.rst  user_guide.md  user_guide.rst
docs/examples/: bhrgt_samples.ipynb  boreholes_geotop_3d.ipynb  bro_soil_cores.ipynb  combine_geotop_with_cpts.ipynb  dis_model.ipynb  geotop_thickness_maps.ipynb  read_xml.ipynb  retrieve_bro_data.ipynb
docs/getting_started/: introduction.ipynb  introduction.md
docs/pages/: about_user_guide.qmd  changelog.md  installation.qmd
examples/: add_areas.py  bhrgt_samples.html  boreholes_geotop_3d.html  boreholes_rail.py  bro_soil_cores.html  combine_geotop_with_cpts.html  cover_layer_thickness.py  cpts_in_areas.py  dinocores_to_vtk.py  dis_model.html  export_for_datafusiontools.py  geotop_thickness_maps.html  layer_analysis_example.py  read_xml.html  retrieve_bro_data.html  temp_test.py
geost/: __init__.py  _borehole.py  _warnings.py  abstract_classes.py  accessor.py  base.py  borehole.py  collections.py  config.py  data_objects.py  enums.py  header_factory.py  headers.py  mixins.py  new_base.py  projections.py  read.py  spatial.py  test.py  test_grain.py  utils.py  validation.py
getting_started/: introduction.html
pysst/: __init__.py  base.py  borehole.py  projections.py  read.py  readers.py  spatial.py  temp_test.py  utils.py  validate.py  write.py
requirements/: pysst_complete_environment.yml  pysst_dev_environment.yml  pysst_minimal_environment.yml  requirements_complete.txt  requirements_dev.txt  requirements_minimal.txt
tests/: .coveragerc  conftest.py  imports.py  test_accessor.py  test_accessors.py  test_analysis.py  test_broapi.py  test_collections.py  test_config.py  test_data_objects.py  test_enums.py  test_export.py  test_gefparser.py  test_geopackage.py  test_geost_data.py  test_header_factory.py  test_headers.py  test_pointcollection.py  test_projections.py  test_read.py  test_sample_data.py  test_select_spatial.py  test_spatial_utils.py  test_user_positional_column_aliases.py  test_utils.py  test_validate.py  test_validation.py
tutorials/: basics.ipynb  installation.ipynb  using_the_bro.ipynb
user_guide/: accessors.html  bro_geotop.html  data_structures.html  model_data.html  read_xml.html  reading_data.html  survey_data.html  validation.html
(+200 files in other folders)
