[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "pandas",
  "pandera",
  "pyarrow",
  "lxml",
  "pooch",
  "pyproj",
  "geopandas",
  "xlrd",
  "openpyxl",
  "rioxarray",
  "shapely",
  "pyvista",
]
description = "The Python interface for geological point data in The Netherlands"
dynamic = ["version"]
keywords = [
  "geost",
  "bro",
  "borehole",
  "well log",
  "cpt",
  "geology",
  "subsurface toolbox",
  "deltares",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Erik van Onselen", email = "erik.vanonselen@deltares.nl"},
  {name = "Bas Knaake", email = "bas.knaake@deltares.nl"},
]
name = "geost"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Deltares-research/geost"
Issues = "https://github.com/Deltares-research/geost/issues"
Repository = "https://github.com/Deltares-research/geost"

[tool.hatch.version]
path = "geost/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["geost", "tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
black = "*"
dask = "*"
geopandas = "*"
lxml = "*"
myst-nb = "*"
myst-parser = "*"
netcdf4 = "*"
numpy = "*"
openpyxl = "*"
pandas = "*"
pandera = "*"
pip = "*"
pooch = "*"
pre-commit = "*"
pyarrow = "*"
pydap = "*"
pydata-sphinx-theme = "*"
pyproj = "*"
pytest = "*"
pytest-cov = "*"
python = ">=3.12"
pyvista = "*"
rioxarray = "*"
ruff = "*"
shapely = "*"
sphinx = "*"
sphinx-design = "*"
xarray = "*"
xlrd = "*"

[tool.pixi.pypi-dependencies]
geost = {path = ".", editable = true}

[tool.pixi.tasks]
docs = "sphinx-build -b html docs ./docs/build"
format = "black ."
lint = "ruff check --fix ./geost"
rebuild_docs = {depends-on = ["rm_jupyter", "rm_build", "rm_generated", "docs"]}
rm_build = "rm -r ./docs/build"
rm_generated = "rm -r ./docs/api_reference/generated"
rm_jupyter = "rm -r ./docs/jupyter_execute"
test = "python -m pytest --verbose --cov=geost --cov-report xml --cov-report term"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = {features = ["py313"], solve-group = "py313"}
py312 = {features = ["py312"], solve-group = "py312"}
py313 = {features = ["py313"], solve-group = "py313"}

[tool.pytest.ini_options]
markers = [
  "unittest: test of single component",
  "integrationtest: test of multiple components",
]
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
ignore = ["F401", "E402", "E501", "F811"]
pydocstyle.convention = "numpy"
select = ["F", "E", "W", "N", "I001", "NPY201"]
unfixable = ["F401"]
