[metadata]
name = pysst
version = 0.1.0
author = Deltares
author_email = erik.vanonselen@deltares.nl
description = Subsurface data made easy
url=https://gitlab.com/deltares/tgg-projects/subsurface-toolbox/pysst
project_urls =
    Code=https://gitlab.com/deltares/tgg-projects/subsurface-toolbox/pysst
    Issues=https://gitlab.com/deltares/tgg-projects/subsurface-toolbox/pysst/-/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research/Consultans
    Topic :: Scientific/Engineering :: Geology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords = 
    pysst
    bro
    boreholes
    cpt
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.10, <3.11
install_requires =
    numpy
    pandas >=2.0.1
    pyarrow
    lxml
    pyproj

[options.extras_require]
all = 
    geopandas
    xlrd
    pyvista >=0.36.1
    shapely >=2.0.1   
dev =
    %(all)s
    black
    pytest
    pytest-cov
    ruff
    sphinx
    sphinx-rtd-theme
